feat: Implement system resources feature in dashboard with localization support

--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -151,6 +151,11 @@
     "description": "Quick tip shown on dashboard"
   },
 
+  "systemResources": "منابع سیستم",
+  "@systemResources": {
+    "description": "System resources section title"
+  },
+
   "extensions": "داخلی‌ها",
   "@extensions": {
     "description": "Extensions page title"
