--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -151,6 +151,11 @@
     "description": "Quick tip shown on dashboard"
   },
 
+  "systemResources": "System Resources",
+  "@systemResources": {
+    "description": "System resources section title"
+  },
+
   "extensions": "Extensions",
   "@extensions": {
     "description": "Extensions page title"
