feat: Add call history section with localization support in English and Persian

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -201,6 +201,11 @@
     "description": "Recent calls section title"
   },
 
+  "callHistory": "Call History",
+  "@callHistory": {
+    "description": "Call history section title"
+  },
+
   "noActiveCalls": "No active calls",
   "@noActiveCalls": {
     "description": "Message when no active calls"
