feat: Enhance SSH service with advanced connection management and error handling
- Implement keep-alive mechanism to prevent session timeout.
- Add connection health check before operations to ensure reliability.
- Introduce retry logic with exponential backoff for SSH connections.
- Create a wrapper for executing operations with automatic recovery from connection errors.
- Improve user-friendly error messages in the CDR page based on error types.
- Update localization files for new error messages and descriptions.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -206,9 +206,19 @@
     "description": "Connection status: connecting"
   },
 
-  "connectionError": "Error",
+  "connectionError": "Connection Error",
   "@connectionError": {
-    "description": "Connection status: error"
+    "description": "SSH connection error message"
+  },
+
+  "authenticationError": "Authentication Failed",
+  "@authenticationError": {
+    "description": "SSH authentication error message"
+  },
+
+  "unexpectedError": "Unexpected Error",
+  "@unexpectedError": {
+    "description": "Generic unexpected error message"
   },
 
   "connectionDisconnected": "Disconnected",
